carousel still floating but fixed lack of spacing between footer and cards on project page

--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -12,9 +12,19 @@
 
 .card-deck .card {
     min-width: 220px;
+}
+
+.card {
     margin-top: 15px;
 }
 
 .projectInfo {
     text-align: center;
+}
+
+.project {
+    padding-top: 0;
+    padding-right: 0;
+    padding-left: 0;
+    background-color: rgba(255, 255, 255, 0.945);
 }
